# LuwiMotion

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_AGENT.md  ARCHITECTURE_PHASE2.md  TODO.md  TODO_AGENT.md  TODO_PHASE2.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
components/: AiChatPanel.tsx  Keyframe.tsx  LayerPanel.tsx  PreviewCanvas.tsx  Timeline.tsx  TimelineTrack.tsx  Toolbar.tsx
data/: mock-data.ts
lib/: ai-gemini.ts  ai-mock.ts  interpolation.ts  ipc-bridge.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  commands.rs  interpolation.rs  lib.rs  model.rs
store/: projectStore.ts
types/: project.ts
