[package]
name = "luwimotion"
version = "0.2.0"
description = "LuwiMotion – Open-Source KI-Motion-Graphics-Tool"
authors = ["LuwiMotion Contributors"]
edition = "2021"

[lib]
name = "luwimotion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
